# paper

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md
paper/: Cargo.toml  Makefile  build.rs
paper-bin/: Cargo.toml
paper-bin/src/: main.rs
paper/include/: paper.udl
paper/paper-package/Sources/Paper/: Paper.swift
paper/paper-package/Sources/PaperBin/: PaperBin.swift
paper/paper-package/Tests/PaperTests/: PaperTests.swift
paper/src/: configuration.rs  error.rs  html_resource.rs  lib.rs  token_scraper.rs
paper/src/api/: api_client.rs  mod.rs  recommender.rs
paper/src/authenticators/: balance_scraper.rs  login_result.rs  mod.rs  opac_authenticator.rs  order_credit_scraper.rs  orders_scraper.rs  public_hamburg_authenticator.rs  scrape_authenticator.rs
paper/src/fixtures/hamburg_public/: roombooking.html
paper/src/fixtures/hamburg_public/account/: balance_multiple_all_payed.html  balance_multiple_owed.html  balance_nothing_owed.html  balance_owed.html  balance_owed_and_payed.html  loans.html  loans_notifications_info.html  loans_preordered.html  loans_warnings.html  preorders.html  userdata.html  userdata_account_locked.html
paper/src/fixtures/hamburg_public/login/: login_currently_not_possible.html  login_incorrect_credentials.html  login_success.html  login_success_info_notice.html  login_success_multiple_loans.html  login_success_warnings.html
paper/src/fixtures/hamburg_public/preorder/: preorder_complete.html  preorder_selection.html
paper/src/fixtures/hamburg_public/renewal/: successful_renewal.html
paper/src/fixtures/hamburg_public/search/: katalog_suchergebnisse_count_few.html  katalog_suchergebnisse_count_many.html  katalog_suchergebnisse_count_none.html  katalog_suchergebnisse_page1.html  katalog_suchergebnisse_page2.html  katalog_suchergebnisse_single_page.html  suchergebnis_detail_no_image.html  suchergebnis_detail_with_image.html
paper/src/fixtures/opc4v2_13Vzg6/login/: borrower_gbv_sbb.html  loans_gbv_sub_hh.html  login_incorrect_credentials.html
paper/src/fixtures/opc4v2_13Vzg6/renewal/: renew_failure.html  renewed-2.html  renewed-second-renewal.html  renewed.html
paper/src/fixtures/opc4v2_13Vzg6/search/: katalog_detail_book_gbv_hh.html  katalog_detail_book_gbv_sbb_online_resource_publicly_available.html  katalog_detail_book_gbv_sbb_single_availability_available.html  katalog_detail_book_gbv_sbb_single_availability_borrowed.html  katalog_detail_book_gbv_sbb_single_availability_not_delivered.html  katalog_detail_book_sbb.html  (+3 more)
paper/src/model/: account.rs  account_info.rs  api.rs  api_configuration.rs  availability.rs  balance.rs  charge.rs  data_entry.rs  item_availability.rs  loan.rs  loan_builder.rs  loans.rs  location.rs  mod.rs  notification.rs  search_result_detail.rs  search_result_list.rs  search_result_list_item.rs  session_token.rs  validation_status.rs
paper/src/model/renewal/: mod.rs  renewal_token_parser.rs
paper/src/scrapers/: balance_scraper.rs  library_scraper.rs  mod.rs  renewal_service.rs  search_detail_scraper.rs  search_scraper.rs  text_provider.rs
paper/src/scrapers/opc4v2_13vzg6/: mod.rs  opc4v2_13_vzg6_renewal_parser.rs  opc4v2_13vzg6_account_scraper.rs  opc4v2_13vzg6_loan_scraper.rs  opc4v2_13vzg6_search_detail_scraper.rs  opc4v2_13vzg6_search_scraper.rs
paper/src/scrapers/public_hamburg/: hamburg_public_search_detail_scraper.rs  hamburg_public_search_scraper.rs  mod.rs  public_hamburg_account_scraper.rs  public_hamburg_loans_scraper.rs  renewal_loan_parser.rs
(+35 files in other folders)
