[package]
name = "paper"
version = "0.1.0"
authors = ["Martin Kim Dung-Pham <martinkim.pham@gmail.com>"]
edition = "2018"

[dependencies]

clap = {version = "2.33.3", features = ["yaml"]}
reqwest = "0.11.0"
xml-rs = "0.8.3"
futures = "0.3"
tokio = {version = "1.2.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
libc = "0.2.86"

[build-dependencies]
cbindgen = "0.17.0"