[package]
name = "paper"
version = "0.1.0"
authors = ["Martin Kim Dung-Pham <martinkim.pham@gmail.com>"]
edition = "2018"

[dependencies]

clap = {version = "2.33.3", features = ["yaml"]}
comfy-table = "2.1.0"
console = "0.14.1"
dialoguer = "0.8.0"
futures = "0.3"
indicatif = "0.15.0"
reqwest = "0.11.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
tokio = {version = "1.2.0", features = ["macros", "rt-multi-thread"]}
xml-rs = "0.8.3"
