[package]
name = "paper-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paper = { path = "../paper" }
clap = { version = "2.33.3" }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
uniffi_bindgen.workspace = true
