[package]
name = "paper"
version = "0.1.0"
authors = ["Martin Kim Dung-Pham <martinkim.pham@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "lib"]
name = "paper"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
dialoguer = "0.8.0"
cookies = "0.0.1"
clap = { version = "2.33.3", features = ["yaml"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
comfy-table = "2.1.0"
console = "0.14.1"
once_cell = "1.18.0"
futures = "0.3"
indicatif = "0.15.0"
reqwest = { version = "0.11.0", features = ["cookies"] }
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["full", "macros", "rt-multi-thread"] }
uniffi = { workspace = true }
xml-rs = "0.8.3"
anyhow = "1.0"
thiserror = "1.0"
scraper = "0.19.0"
regex = "1.10.5"
uniffi_bindgen = { version = "=0.28.0" }
chrono = "0.4.38"
uuid = { version = "1.4", features = ["v4"] }
roxmltree = "0.20.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[profile.release]
# codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# lto = true        # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
# panic = 'abort'     # Abort on panic
debug = false # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.
